updated db config

--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "illuminate/events": "^8.52",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.3",
-        "fakerphp/faker": "^1.9.1"
+        "laravel/ui": "^3.3"
 
     },
     "require-dev": {
@@ -23,7 +22,9 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "phpunit/phpunit": "^9.3.3",
+
+        "fakerphp/faker": "^1.9.1"
     },
     "autoload": {
         "psr-4": {
