--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "illuminate/events": "^8.52",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.3",
-
+        "laravel/ui": "^3.3"
 
     },
     "require-dev": {
@@ -24,8 +23,7 @@
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3.3",
-        "fakerphp/faker": "^1.15.0"
-
+        "fakerphp/faker": "^1.9.1"
     },
     "autoload": {
         "psr-4": {
