--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "illuminate/events": "^8.52",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.3",
+        "laravel/ui": "^3.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
